feat/add_appset

--- a/iac/helm-values/argo-cd.yaml
+++ b/iac/helm-values/argo-cd.yaml
@@ -5,6 +5,8 @@ server:
     enabled: true
     ingressClassName: nginx
 configs:
+  cm:
+    timeout.reconciliation: 60s
   secret:
     argocdServerAdminPassword: ${bcrypt(argoAdminPassword)}
   params:
