--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -31,7 +31,7 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source-directory: manifests
-          destination-github-username: ${{ GITHUB_REPOSITORY_OWNER }}
+          destination-github-username: ${{ github.repository_owner }}
           destination-repository-name: desafio-apps
           target-directory: desafio-app
           user-email: devops@felipe.avila
