--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["gunicorn", "--log-level", "debug", "api:app"]
+CMD ["gunicorn", "-b", "0.0.0.0:8000", "--log-level", "debug", "api:app"]
