--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -2,7 +2,7 @@
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+      - '^[0-9]+.[0-9]+.[0-9]+$'
       
 jobs:
   build-and-push-app-image:
@@ -37,6 +37,6 @@ jobs:
           source-directory: manifests
           destination-github-username: ${{ github.repository_owner }}
           destination-repository-name: desafio-apps
-          target-directory: desafio-app
+          target-directory: comentarios
           user-email: devops@felipe.avila
           user-name: devops
