--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -17,4 +17,16 @@ spec:
       - name: comentarios
         image: fsavila/desafio-app:$TAG
         ports:
-        - containerPort: 8000
+          - containerPort: 8000
+        readinessProbe:
+          httpGet:
+            path: /healthcheck
+            port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /healthcheck
+            port: 8000
+          initialDelaySeconds: 15
+          periodSeconds: 20
